--- a/src/pages/accounting/Accounting.scss
+++ b/src/pages/accounting/Accounting.scss
@@ -43,12 +43,31 @@
                             border-radius: 10px;
                             cursor: pointer;
                             // box-shadow: 0px 0px 4px 1px #F7F8FA;
+
+                            .icon-title{
+                                display: flex;
+                                flex-flow: column;
+                                align-items: center;
+                                gap: 10px;
+
+                                .icon{
+                                    width: 30px;
+                                    height: 30px;
+                                    color: white;
+                                }
+
+                                span{
+                                    color: white;
+                                    font-size: 18px;
+                                    font-weight: 500;
+                                }
+                            }
                         }
                     }
                 }
     
                 .navigation-container{
-                    border-radius: 10px 10px 0 0;
+                    border-radius: 100px 100px 0 0;
                     
                     .slide-track{
                         display: inline-block;
@@ -66,7 +85,7 @@
                 }
 
                 .navigation-container03{
-                    border-radius: 0 0 10px 10px;
+                    border-radius: 0 0 100px 100px;
                     .slide-track{
                         display: inline-block;
                         animation: slide-infini 15s infinite linear;
