--- a/src/pages/parents/Parents.scss
+++ b/src/pages/parents/Parents.scss
@@ -79,6 +79,15 @@
                     background-color: #f8fafc;
                 }
 
+                &.even{
+                    background-color: #f8fafc;
+                }
+
+                &.odd{
+                    background-color: transparent;
+                }
+
+
                 .info-name-email{
                     display: flex;
                     align-items: center;
