--- a/src/pages/subjects/Subjects.scss
+++ b/src/pages/subjects/Subjects.scss
@@ -79,6 +79,15 @@
                     background-color: #f8fafc;
                 }
 
+                &.even{
+                    background-color: #f8fafc;
+                }
+
+                &.odd{
+                    background-color: transparent;
+                }
+
+
                 .icon-name{
                     display: flex;
                     align-items: center;
