--- a/src/pages/accounting/Accounting.scss
+++ b/src/pages/accounting/Accounting.scss
@@ -21,10 +21,14 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            position: relative;
 
             .commandes{
-                width: 100%;
+                // width: 100%;
+                width: 75%;
                 place-items: center;
+                position: relative;
+                background-color: white;
 
                 .navigation-container,.navigation-container02,.navigation-container03{
                     overflow: hidden;
@@ -42,7 +46,7 @@
                             outline: none;
                             border-radius: 10px;
                             cursor: pointer;
-                            // box-shadow: 0px 0px 4px 1px #F7F8FA;
+                            // box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.404);
 
                             .icon-title{
                                 display: flex;
@@ -67,7 +71,13 @@
                 }
     
                 .navigation-container{
-                    border-radius: 100px 100px 0 0;
+                    border-radius: 50px 50px 0 0;
+                    border-top: 20px solid #040558;
+                    border-bottom: none;
+                    padding-top: 30px;
+                    position: relative;
+                    z-index: 100;
+                    background-color: white;
                     
                     .slide-track{
                         display: inline-block;
@@ -77,6 +87,11 @@
 
                 .navigation-container02{
                     margin: 10px auto;
+                    border-radius: 0 0 50px 50px;
+                    border-bottom: 20px solid #040558;
+                    padding-bottom: 30px;
+                    position: relative;
+
                     
                     .slide-track{
                         display: inline-block;
@@ -99,7 +114,46 @@
                 }
     
             }
-            
+
+            .slash-second{
+                position: absolute;
+                left: 50%;
+                width: 20px;
+                height: 100%;
+                transform: translateX(-50%);
+                // background-color: red;
+                display: flex;
+                gap: 5px;
+
+
+                span{
+                    background-color: #F7F8FA;
+                    width: 10px;
+                    height: 100%;
+                    display: block;
+                }
+
+            }
+
+            .slash-first{
+                position: absolute;
+                top: 50%;
+                width: 100%;
+                height: 100px;
+                display: flex;
+                flex-direction: column;
+                gap: 45px;
+                // left: 50%;
+                transform: translateY(-50%);
+
+                span{
+                    background-color: #F7F8FA;
+                    width: 100%;
+                    height: 25px;
+                    display: block;
+                }
+            }
+
 
         }
     }
@@ -142,6 +196,21 @@
 
 }
 
+@media screen and (max-width: 768px){
+    .accounting-container{
+    
+        .right{
+           
+            .sub-container{
+
+                .commandes{
+                    width: 100%;
+                }
+            }
+        }
+    }
+    
+}
 @media screen and (min-width: 768px){
     .accounting-container{
     
